<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Tandem</string>
    <string name="report_faq_url" translatable="false">https://docs.tandem-agenda.app/guide/faq</string>

    <string name="login_title">Welcome back</string>
    <string name="login_subtitle">Sign in to pick up where you left off.</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_confirm">Changes not yet synced will be lost on this phone.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create an account</string>
    <string name="error_invalid_credentials">Incorrect email or password.</string>
    <string name="error_network">Can\'t connect. Check your network.</string>
    <string name="error_rate_limited">Too many attempts. Try again in a minute.</string>
    <string name="error_generic">Something went wrong. Please try again.</string>

    <string name="nav_today">Today</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_calendar">Calendar</string>
...
